[gd_scene load_steps=20 format=3 uid="uid://dx1fk2xow6r2j"]

[ext_resource type="Script" path="res://enemies/Maiden/maiden_enemy_script.gd" id="1_67eai"]
[ext_resource type="PackedScene" uid="uid://d1xj5a7t72vxp" path="res://enemies/Maiden/maiden_ai_manager.tscn" id="2_ug773"]
[ext_resource type="Script" path="res://common/health.gd" id="2_xhh10"]
[ext_resource type="Script" path="res://common/hitbox.gd" id="4_stpda"]
[ext_resource type="Script" path="res://common/hurtbox.gd" id="5_e4ir2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_utb2a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4538d"]
diffuse_mode = 3
albedo_color = Color(0.921569, 0.341176, 0.341176, 1)
emission = Color(1, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iv2ui"]
material = SubResource("StandardMaterial3D_4538d")

[sub_resource type="Animation" id="Animation_38soa"]
length = 0.001
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape3D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.924626, 0.7153, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.490013, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qh6ik"]
resource_name = "attack"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.309), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape3D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape3D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.924626, 0.7153, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.490013, 0, 0)]
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c2rqt"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_4mvm1"]
resource_name = "stagger"
length = 0.300005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.174254), Vector3(0, 0, -0.174533), Vector3(0, 0, 0.0840202), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("MeshInstance3D:surface_material_override/0")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [SubResource("StandardMaterial3D_c2rqt"), SubResource("StandardMaterial3D_c2rqt"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o72sg"]
_data = {
"RESET": SubResource("Animation_38soa"),
"attack": SubResource("Animation_qh6ik"),
"stagger": SubResource("Animation_4mvm1")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_ht1ai"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rf0bd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o26do"]
bg_color = Color(0.32549, 0.741176, 0.462745, 1)

[sub_resource type="Theme" id="Theme_7nppo"]
ProgressBar/styles/background = SubResource("StyleBoxEmpty_rf0bd")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_o26do")

[sub_resource type="BoxShape3D" id="BoxShape3D_baw2v"]
size = Vector3(0.924626, 0.7153, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lau5f"]
radius = 0.610806
height = 2.10739

[node name="Maiden Enemy" type="CharacterBody3D"]
script = ExtResource("1_67eai")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00357932, 0)
shape = SubResource("CapsuleShape3D_utb2a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_iv2ui")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o72sg")
}

[node name="HealthDisplay" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23996, 0)
billboard = 1
texture = SubResource("ViewportTexture_ht1ai")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(100, 15)

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
offset_right = 100.0
offset_bottom = 15.0
theme = SubResource("Theme_7nppo")
value = 100.0
show_percentage = false

[node name="Health" type="Node" parent="."]
script = ExtResource("2_xhh10")
max_health = 100

[node name="Maiden AI Manager" parent="." instance=ExtResource("2_ug773")]

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource("4_stpda")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.490013, 0, 0)
shape = SubResource("BoxShape3D_baw2v")
disabled = true

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 64
collision_mask = 4
script = ExtResource("5_e4ir2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00948918, 0)
shape = SubResource("CapsuleShape3D_lau5f")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="enemy_hit_instance" from="." to="Maiden AI Manager" method="_on_maiden_enemy_enemy_hit_instance"]
[connection signal="death" from="Health" to="." method="_on_health_death"]
[connection signal="check_velocity" from="Maiden AI Manager" to="." method="_on_maiden_ai_manager_check_velocity"]
[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
